stylus/global/_helpers.styl
// Copyright (c) 2021, garitma.com.
// Helpers
// Licensed under MIT - see LICENSE.txt 
// Aura Design System

.uline 
  text-decoration: underline;

.ulinea a:not(.button-link, .button-fill) 
  text-decoration: underline;

.logo-circle
    padding 9px!important
    background-color #ffffff!important
    mixin-border-radius(50%!important) 
    z-index 4!important

.flex-right
    margin-left auto

.flex-left
    margin-right auto

.flex-center
    margin-right auto
    margin-left auto

.centertxt
    text-align center
    &-small
        @media only screen and (max-width: $small)
            text-align: center
    
.lefttxt
    text-align left 

.righttxt
    text-align right 

.valign
    mixin-flex()
    justify-content center
    flex-direction column

.halign
    justify-content center!important

.vfluid
    height 100%!important

.fluid
    width 100%!important

.circle
    mixin-border-radius(50%!important)

.square
    mixin-border-radius(0!important)

.responsive-image
    max-width 100%
    height auto

.disabled
    opacity var(--aura-opacity)
    cursor default

.pre-disabled
    opacity var(--aura-opacity)
    cursor pointer
    transition opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1)
    &:hover
        opacity 1
    
.interactive
    min-width 48px
    min-height 48px 

.typeahead
    padding-left aura * 6!important

.hide
    display none!important

.show
    display block!important

.flowx
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;

.truncate
    white-space nowrap
    overflow hidden
    text-overflow ellipsis

.anchor
    position: relative;

.overley
    position absolute
    right 0
    left 0
    top 0
    bottom 0
    cursor pointer
    z-index: 5

.hold
    position fixed
    z-index: 7
    &.right
        right 0
    &.left
        left 0
    &.top
        top 0
    &.bottom
        bottom 0

.pin
    position absolute
    z-index: 2
    &.right
        right 0
    &.left
        left 0
    &.top
        top 0
    &.bottom
        bottom 0


.action
    position absolute
    top 50%
    left 50%
    transform translate(-50%, -50%)
    &.left
        left aura * 4
        right auto
    &.right
        right aura * 4
        left auto

.z-10 
  z-index: 10;

@media only screen and (max-width: $small)
    .hide-small
        display none

@media screen and (max-width: $small) and (min-width: $large)
    .hide-medium
        display none

@media only screen and (min-width: $large)
    .hide-large
        display none

